crates/crucible-sqlite/src/query/render/snapshots/crucible_sqlite__query__render__sqlite__tests__filter_contains.snap
---
source: crates/crucible-sqlite/src/query/render/sqlite.rs
assertion_line: 1391
expression: result.sql
---
SELECT * FROM notes
WHERE title LIKE :filter_0 ESCAPE '\\'
