crates/crucible-sqlite/src/query/render/snapshots/crucible_sqlite__query__render__sqlite__tests__filter_ends_with.snap
---
source: crates/crucible-sqlite/src/query/render/sqlite.rs
assertion_line: 1423
expression: result.sql
---
SELECT * FROM notes
WHERE path LIKE :filter_0 ESCAPE '\\'
