crates/crucible-sqlite/src/query/render/snapshots/crucible_sqlite__query__render__sqlite__tests__filter_eq.snap
---
source: crates/crucible-sqlite/src/query/render/sqlite.rs
assertion_line: 1375
expression: result.sql
---
SELECT * FROM notes
WHERE folder = :filter_0
