crates/crucible-sqlite/src/query/render/snapshots/crucible_sqlite__query__render__sqlite__tests__recursive_range.snap
---
source: crates/crucible-sqlite/src/query/render/sqlite.rs
assertion_line: 1315
expression: result.sql
---
WITH RECURSIVE traverse(path, depth, visited) AS (
    -- Base case: starting node
    SELECT :source, 0, :source

    UNION ALL

    -- Recursive case: follow edges
    SELECT
        e.target,
        t.depth + 1,
        t.visited || ',' || e.target
    FROM traverse t
    JOIN edges e ON e.source = t.path AND e.type = :edge_type
    WHERE instr(',' || t.visited || ',', ',' || e.target || ',') = 0  -- cycle prevention
         AND t.depth < 3
)
SELECT DISTINCT a.*
FROM notes a
JOIN traverse t ON a.path = t.path
WHERE t.depth >= 1
  AND t.path != :source
